correct the spacing of li's

--- a/app/assets/stylesheets/curriculum.css.scss
+++ b/app/assets/stylesheets/curriculum.css.scss
@@ -108,7 +108,7 @@
     color: #f60;
   }
   #main_content ol>li{
-    padding-bottom: 6px;
+    
   }
   #main_content{
 
